# python-startup

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/intro/: my_executable.py
tests/intro/: test_add.py
