[tool.poetry]
name = "python-startup"
version = "0.1.0"
description = ""
authors = ["Daniel Bove <daniel.bove@slicelife.com>"]
readme = "README.md"
packages = [{from = "src", include="*"}]

[tool.poetry.dependencies]
python = "~3.12"
django = "5.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.13.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
